--- a/package.json
+++ b/package.json
@@ -8,20 +8,24 @@
     "url": "https://github.com/contentful/starter-gatsby-blog/issues"
   },
   "dependencies": {
-    "gatsby": "^2.23.9",
-    "gatsby-image": "^2.4.8",
+    "babel-plugin-styled-components": "^1.11.1",
+    "fontsource-montserrat": "^3.0.9",
+    "gatsby": "^2.26.0",
+    "gatsby-image": "^2.4.21",
     "gatsby-plugin-react-helmet": "^3.3.5",
-    "gatsby-plugin-sharp": "^2.6.43",
+    "gatsby-plugin-sharp": "^2.7.1",
+    "gatsby-plugin-styled-components": "^3.3.14",
     "gatsby-source-contentful": "^2.3.17",
     "gatsby-transformer-remark": "^2.8.18",
-    "gatsby-transformer-sharp": "^2.5.6",
+    "gatsby-transformer-sharp": "^2.5.21",
     "gh-pages": "^3.1.0",
     "lodash": "^4.17.15",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-helmet": "^6.1.0",
     "react-select": "^3.1.0",
-    "sharp": "^0.25.4"
+    "sharp": "^0.25.4",
+    "styled-components": "^5.2.1"
   },
   "devDependencies": {
     "contentful-import": "^7.8.6",
