--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "url": "https://github.com/contentful/starter-gatsby-blog/issues"
   },
   "dependencies": {
+    "@typeform/embed": "^0.25.6",
     "babel-plugin-styled-components": "^1.11.1",
     "fontsource-montserrat": "^3.0.9",
     "gatsby": "^2.26.0",
@@ -16,6 +17,8 @@
     "gatsby-plugin-sharp": "^2.7.1",
     "gatsby-plugin-styled-components": "^3.3.14",
     "gatsby-source-contentful": "^2.3.17",
+    "gatsby-source-rss-feed": "^1.2.2",
+    "gatsby-source-twitter": "^3.2.2",
     "gatsby-transformer-remark": "^2.8.18",
     "gatsby-transformer-sharp": "^2.5.21",
     "gh-pages": "^3.1.0",
