updates for vimeo typeform link broken

--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "contentful-starter-gatsby-blog",
-  "description": "Contentful Gatsby Starter Blog",
+  "name": "ACC Careers",
+  "description": "A list of jobs available around the country.",
   "private": true,
   "version": "0.0.1",
-  "author": "Contentful <opensource@contentful.com>",
+  "author": "Ricky H<rickyhobbs@acc.edu.au>",
   "bugs": {
     "url": "https://github.com/contentful/starter-gatsby-blog/issues"
   },
@@ -19,6 +19,7 @@
     "gatsby-source-contentful": "^2.3.17",
     "gatsby-source-rss-feed": "^1.2.2",
     "gatsby-source-twitter": "^3.2.2",
+    "gatsby-source-vimeo-all": "0.0.18",
     "gatsby-transformer-remark": "^2.8.18",
     "gatsby-transformer-sharp": "^2.5.21",
     "gh-pages": "^3.1.0",
