trying to fix json deploy error

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ACC_Careers",
+  "name": "AccCareers",
   "description": "A list of jobs available around the country.",
   "private": false,
   "version": "0.0.1",
