--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "fontsource-montserrat": "^3.0.9",
     "gatsby": "^2.26.0",
     "gatsby-image": "^2.4.21",
+    "gatsby-plugin-feed": "^2.9.0",
     "gatsby-plugin-react-helmet": "^3.3.5",
     "gatsby-plugin-sharp": "^2.7.1",
     "gatsby-plugin-styled-components": "^3.3.14",
