--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "gatsby": "^2.26.0",
     "gatsby-image": "^2.4.21",
     "gatsby-plugin-feed": "^2.9.0",
+    "gatsby-plugin-google-tagmanager": "^2.7.0",
+    "gatsby-plugin-manifest": "^2.8.0",
+    "gatsby-plugin-offline": "^3.6.0",
     "gatsby-plugin-react-helmet": "^3.3.5",
     "gatsby-plugin-sharp": "^2.7.1",
     "gatsby-plugin-styled-components": "^3.3.14",
