--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "gatsby-plugin-offline": "^3.6.0",
     "gatsby-plugin-react-helmet": "^3.3.5",
     "gatsby-plugin-sharp": "^2.7.1",
+    "gatsby-plugin-sitemap": "^2.8.0",
     "gatsby-plugin-styled-components": "^3.3.14",
     "gatsby-source-contentful": "^2.3.17",
     "gatsby-source-rss-feed": "^1.2.2",
