--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "AccCareers",
+  "name": "acccareers",
   "description": "A list of jobs available around the country.",
   "private": false,
   "version": "0.0.1",
@@ -9,35 +9,34 @@
   },
   "dependencies": {
     "@typeform/embed": "^0.25.6",
-    "babel-plugin-styled-components": "^1.11.1",
-    "fontsource-montserrat": "^3.0.9",
-    "gatsby": "^2.26.0",
+    "babel-plugin-styled-components": "^1.13.2 ",
+    "gatsby": "^3.10.0",
     "gatsby-image": "^2.4.21",
     "gatsby-plugin-feed": "^2.9.0",
     "gatsby-plugin-google-tagmanager": "^2.7.0",
-    "gatsby-plugin-manifest": "^2.8.0",
+    "gatsby-plugin-image": "^1.10.0",
+    "gatsby-plugin-manifest": "^3.10.0",
     "gatsby-plugin-offline": "^3.6.0",
     "gatsby-plugin-react-helmet": "^3.3.5",
-    "gatsby-plugin-sharp": "^2.7.1",
-    "gatsby-plugin-sitemap": "^2.8.0",
-    "gatsby-plugin-styled-components": "^3.3.14",
-    "gatsby-source-contentful": "^2.3.17",
+    "gatsby-plugin-sharp": "^3.10.0",
+    "gatsby-plugin-sitemap": "^4.6.0",
+    "gatsby-plugin-styled-components": "^4.10.0",
+    "gatsby-source-contentful": "^5.10.0",
     "gatsby-source-rss-feed": "^1.2.2",
-    "gatsby-source-twitter": "^3.2.2",
+    "gatsby-source-twitter": "^4.0.0",
     "gatsby-transformer-remark": "^2.8.18",
     "gatsby-transformer-sharp": "^2.5.21",
     "gh-pages": "^3.1.0",
-    "lodash": "^4.17.15",
+    "loadash": "^1.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-helmet": "^6.1.0",
     "react-select": "^3.1.0",
-    "sharp": "^0.25.4",
-    "styled-components": "^5.2.1"
+    "sharp": "^0.28.3",
+    "styled-components": "^5.3.0"
   },
   "devDependencies": {
-    "contentful-import": "^7.8.6",
-    "netlify-cli": "^2.54.0"
+    "contentful-import": "^7.8.6"
   },
   "homepage": "https://www.acc.edu.au/careers/",
   "keywords": [
