--- a/package.json
+++ b/package.json
@@ -18,13 +18,15 @@
     "gatsby-plugin-manifest": "^3.10.0",
     "gatsby-plugin-offline": "^4.10.0",
     "gatsby-plugin-react-helmet": "^3.3.5",
-    "gatsby-plugin-sharp": "^3.10.0",
+    "gatsby-plugin-sharp": "^3.10.2",
     "gatsby-plugin-sitemap": "^4.6.0",
     "gatsby-plugin-styled-components": "^4.10.0",
     "gatsby-source-contentful": "^5.10.0",
+    "gatsby-source-filesystem": "^3.10.0",
     "gatsby-source-rss-feed": "^1.2.2",
     "gatsby-source-twitter": "^4.0.0",
     "gatsby-transformer-remark": "^4.7.0",
+    "gatsby-transformer-sharp": "^3.10.0",
     "gh-pages": "^3.1.0",
     "loadash": "^1.0.0",
     "react": "^16.13.1",
