--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "url": "https://github.com/ACC-web/careers/issues"
   },
   "dependencies": {
-    "@typeform/embed": "^0.10.0",
+    "@typeform/embed-react": "^1.0.7",
     "babel-plugin-styled-components": "^1.13.2 ",
     "gatsby": "^3.10.0",
     "gatsby-image": "^3.10.0",
@@ -34,7 +34,6 @@
     "react-dom": "^16.13.1",
     "react-helmet": "^6.1.0",
     "react-select": "^3.1.0",
-    "react-typeform-embed": "^0.2.1",
     "sharp": "^0.28.3",
     "styled-components": "^5.3.0"
   },
