Updated packages: attempted site fix

--- a/package.json
+++ b/package.json
@@ -13,11 +13,12 @@
     "gatsby": "^3.10.0",
     "gatsby-image": "^3.10.0",
     "gatsby-plugin-feed": "^3.10.0",
+    "gatsby-plugin-gatsby-cloud": "^3.2.1",
     "gatsby-plugin-google-tagmanager": "^3.10.0",
     "gatsby-plugin-image": "^1.10.1",
     "gatsby-plugin-manifest": "^3.10.0",
     "gatsby-plugin-offline": "^4.10.0",
-    "gatsby-plugin-react-helmet": "^3.10.0",
+    "gatsby-plugin-react-helmet": "^4.10.0",
     "gatsby-plugin-sharp": "^3.10.2",
     "gatsby-plugin-sitemap": "^4.6.0",
     "gatsby-plugin-styled-components": "^4.10.0",
@@ -31,6 +32,7 @@
     "joi": "^13.7.0",
     "loadash": "^1.0.0",
     "react": "^16.13.1",
+    "react-is": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-helmet": "^6.1.0",
     "react-select": "^3.1.0",
