--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "gatsby-plugin-manifest": "^4.20.0",
     "gatsby-plugin-offline": "^5.20.0",
     "gatsby-plugin-react-helmet": "^5.20.0",
+    "gatsby-plugin-react-helmet-canonical-urls": "^1.4.0",
     "gatsby-plugin-sharp": "^4.20.0",
     "gatsby-plugin-sitemap": "^5.20.0",
     "gatsby-plugin-styled-components": "^5.20.0",
@@ -30,9 +31,9 @@
     "gh-pages": "^4.0.0",
     "loadash": "^1.0.0",
     "react": "^17.0.2",
-    "react-is": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
+    "react-is": "^17.0.2",
     "react-select": "^5.4.0",
     "sharp": "^0.30.7",
     "styled-components": "^5.3.5"
